--- a/android_app/app/src/main/res/layout/main.xml
+++ b/android_app/app/src/main/res/layout/main.xml
@@ -33,13 +33,14 @@
 
             <TextView
                 android:id="@+id/tvSZCS"
-                android:layout_width="38dp"
+                android:layout_width="44dp"
                 android:layout_height="42dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="4dp"
+                android:layout_marginLeft="6dp"
                 android:background="#ffffff"
                 android:paddingTop="12dp"
-                android:text="福州"
+                android:textSize="13dp"
+                android:text=""
                 android:textAlignment="center" />
 
             <ImageView
