--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
@@ -79,7 +79,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十条</td>
-                    <td class="td_content">风铃网：指风铃网网(www.infotownlet.com)、风铃网无线站点（包括wap.infotownlet.com）及风铃网移动应用软件（APP）（简称“风铃网平台”）的所有者及其关联服务提供方。</td>
+                    <td class="td_content">风铃网：指风铃网网(www.915fl.com)、风铃网无线站点（包括wap.915fl.com）及风铃网移动应用软件（APP）（简称“风铃网平台”）的所有者及其关联服务提供方。</td>
                 </tr>
                 <tr>
                     <td class="td_title">第十一条</td>
@@ -1846,7 +1846,7 @@
             <em class="em_div_bottom_inner"></em>
             <span class="span_div_bottom_inner">客户服务中心</span>
             <em class="em_div_bottom_inner"></em>
-            <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
+            <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.915fl.com</span>
         </div>
     </div>
     <div class="div_rtop" id="div_rtop" onClick="GoToTop()"></div>
