--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -47,7 +47,7 @@
     <div id="divHead" class="div_head">
         <div class="div_head_left">
             <img class="img_head_left" src="@Url.Content("~/Areas/Business/Css/images/logo.png")" />
-            <span class="span_head_left">infotownlet.com</span>
+            <span class="span_head_left">915fl.com</span>
         </div>
         <ul class="ul_head_right">
             <li class="li_head_right" id="liWDXX">我的信息</li>
@@ -135,7 +135,7 @@
             <em class="em_div_bottom_inner"></em>
             <span class="span_div_bottom_inner">客户服务中心</span>
             <em class="em_div_bottom_inner"></em>
-            <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
+            <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.915fl.com</span>
         </div>
     </div>
     <div class="div_shadow" id="shadow"></div>
@@ -179,7 +179,7 @@
                 一、充值支付及风铃网现金服务使用约定
             </div>
             <div class="div_body_text">
-                &nbsp;&nbsp;&nbsp;&nbsp;1、用户可根据本协议约定及风铃网现金服务规则提示，选择不同的风铃网充值渠道进行风铃网现金充值。风铃网现金充值操作规则URL：http://about.infotownlet.com/325.html。
+                &nbsp;&nbsp;&nbsp;&nbsp;1、用户可根据本协议约定及风铃网现金服务规则提示，选择不同的风铃网充值渠道进行风铃网现金充值。风铃网现金充值操作规则URL：http://about.915fl.com/325.html。
             </div>
             <div class="div_body_text">
                 &nbsp;&nbsp;&nbsp;&nbsp;2、风铃网网不提供用户之间的风铃网现金互转服务。
@@ -221,7 +221,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;4、用户须根据本协议及各项规则的规定使用风铃网现金服务，并按照国家法律法规（包括但不限于《广告法》、《互联网广告管理暂行办法》等）、本协议、风铃网规则等规定编辑、发布、 修改、更新推广信息，并对所发布信息及基于信息与用户间达成交易的真实性、有效性、准确性、合法性（包括但不限于《消费者权益保护法》、《产品质量法》、 《广告法》等）、不侵犯第三方合法权利（包括但不限于知识产权、隐私权、肖像权等人身权利及或其他合法权利）独立承担全部法律责任。如用户推广内容、信息或页面中通过设置链接或跳转方式可链至用户自有网站，则用户承诺其自有网站经营及内容合法、有效。用户应积极妥善解决与风铃网其他用户间开展交易过程中产生的全部争议、纠纷、索赔、仲裁、诉讼等。如因第三方（包括但不限于其他用户、权利人、国家监管机关或司法机关的通知、裁 决等）投诉举证用户信息/线下交易违法/违约且用户未能及时自证的，风铃网有权冻结用户账号及至终止提供服务并要求用户承担违约责任。
             </div>
             <div class="div_body_text">
-                &nbsp;&nbsp;&nbsp;&nbsp;5、用户同意风铃网通过风铃网网（www.infotownlet.com）站内公告、站内信、手机短信、用户后台或用户填写的其他联系方式向用户发布产品规则、政策、通知等信息。用户同意风铃网有权根据经营需要变更推广服务的具体形式和内容。风铃网推广服务形式、内容发生变更前，风铃网应通过站内公告、站内信、邮件、电话或短信、用户后台等方式(上述任一方式)通知用户。用户使用变更后的服务，视为用户接受变更。
+                &nbsp;&nbsp;&nbsp;&nbsp;5、用户同意风铃网通过风铃网网（www.915fl.com）站内公告、站内信、手机短信、用户后台或用户填写的其他联系方式向用户发布产品规则、政策、通知等信息。用户同意风铃网有权根据经营需要变更推广服务的具体形式和内容。风铃网推广服务形式、内容发生变更前，风铃网应通过站内公告、站内信、邮件、电话或短信、用户后台等方式(上述任一方式)通知用户。用户使用变更后的服务，视为用户接受变更。
             </div>
             <div class="div_body_text">
                 &nbsp;&nbsp;&nbsp;&nbsp;6、用户需对自己在使用风铃网服务过程中的行为承担法律责任。若用户的行为违反上述承诺条款的，风铃网网将有权作出独立判断采取相应措施，包括但不限于直接屏蔽、删除违法侵权信息、降低用户信用值，或直接停止提供服务、关闭风铃网现金用户服务帐号，同时相应金额不予退还。
@@ -236,7 +236,7 @@
                 三、风铃网网的权利义务
             </div>
             <div class="div_body_text">
-                &nbsp;&nbsp;&nbsp;&nbsp;1、风铃网（www.infotownlet.com）的网络服务提供者（包括风铃网网（www.infotownlet.com）的所有者及其关联服务提供方）将按照《风铃网现金服务协议》和风铃网现金操作规则为风铃网平台用户提供本协议约定的风铃网现金服务。风铃网网站及用户后台发布的风铃网现金服务相关的操作规则、帮助、名词解释等（本协议中统称“规则”）为本协议的有效组成部分。
+                &nbsp;&nbsp;&nbsp;&nbsp;1、风铃网（www.915fl.com）的网络服务提供者（包括风铃网网（www.915fl.com）的所有者及其关联服务提供方）将按照《风铃网现金服务协议》和风铃网现金操作规则为风铃网平台用户提供本协议约定的风铃网现金服务。风铃网网站及用户后台发布的风铃网现金服务相关的操作规则、帮助、名词解释等（本协议中统称“规则”）为本协议的有效组成部分。
             </div>
             <div class="div_body_text">
                 &nbsp;&nbsp;&nbsp;&nbsp;2、风铃网网有权根据国家法律法规的更新、产品和服务规则的调整需要不时地制定、修改《风铃网现金服务协议》及相关余额操作规则，并以网站公示的方式进行公示。如用户继续使用风铃网平台风铃网现金服务的，即表示您接受经修订的协议和规则。如发生有关争议时，以风铃网最新的相关协议和规则为准。
@@ -284,7 +284,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;3 、因本协议产生之争议、纠纷，应由风铃网与您友好协商；协商不成的，应依照中华人民共和国法律予以处理，并以福建省福州市鼓楼区人民法院为第一审管辖法院；按照中华人民共和国法律，因级别管辖的规定，福建省福州市鼓楼区人民法院无权管辖的，以其上级法院作为第一审管辖法院。
             </div>
             <div class="div_XJFWXYbottom">
-                ©&nbsp;infotownlet.com
+                ©&nbsp;915fl.com
             </div>
         </div>
     </div>
