--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
@@ -95,7 +95,7 @@
             <em class="em_div_bottom_inner"></em>
             <span class="span_div_bottom_inner">客户服务中心</span>
             <em class="em_div_bottom_inner"></em>
-            <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
+            <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.915fl.com</span>
         </div>
     </div>
 }
