--- a/android_app/app/src/main/res/layout/fb.xml
+++ b/android_app/app/src/main/res/layout/fb.xml
@@ -18,123 +18,365 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="60dp"
                 android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="350dp"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="50dp"
+                    android:textSize="20dp"
+                    android:gravity="center"
+                    android:text="选择发布类别" />
+
+                <TextView
+                    android:id="@+id/tvGD"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="我的发布" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_gravity="bottom"
+                android:background="@null"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/llFC"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivFC"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/fc" />
+
+                    <TextView
+                        android:id="@+id/tvFC"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="房产"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llZP"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivZP"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/zp" />
+
+                    <TextView
+                        android:id="@+id/tvZP"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="招聘"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llJZ"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivJZ"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/jz" />
+
+                    <TextView
+                        android:id="@+id/tvJZ"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="兼职"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_gravity="bottom"
+                android:background="@null"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/llES"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivES"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/es" />
+
+                    <TextView
+                        android:id="@+id/tvES"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="二手"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llCL"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivCL"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/cl" />
+
+                    <TextView
+                        android:id="@+id/tvCL"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="车辆"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llSHFW"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivSHFW"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/shfw" />
+
+                    <TextView
+                        android:id="@+id/tvSHFW"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="生活服务"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_gravity="bottom"
+                android:background="@null"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/llSWFW"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivSWFW"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/swfw" />
+
+                    <TextView
+                        android:id="@+id/tvSWFW"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="商务服务"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llCW"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivCW"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/cw" />
+
+                    <TextView
+                        android:id="@+id/tvCW"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="宠物"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llZSJM"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivZSJM"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/fb_zsjm" />
+
+                    <TextView
+                        android:id="@+id/tvZSJM"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="招商加盟"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_gravity="bottom"
+                android:background="@null"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/llJYPX"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivJYPX"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/jypx" />
+
+                    <TextView
+                        android:id="@+id/tvJYPX"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="教育培训"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llZXJC"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivZXJC"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/zxjc" />
+
+                    <TextView
+                        android:id="@+id/tvZXJC"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="装修建材"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llPFCG"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivPFCG"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/pfcg" />
+
+                    <TextView
+                        android:id="@+id/tvPFCG"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="批发采购"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_gravity="bottom"
-        android:background="@null"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/llSY"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivSY"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/sy" />
-
-            <TextView
-                android:id="@+id/tvSY"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="首页"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llFB"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivFB"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/fb" />
-
-            <TextView
-                android:id="@+id/tvFB"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="发布"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llXX"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivXX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/xx" />
-
-            <TextView
-                android:id="@+id/tvXX"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="消息"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llGRZX"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivGRZX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/grzx" />
-
-            <TextView
-                android:id="@+id/tvGRZX"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="个人中心"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
