--- a/android_app/app/src/main/res/layout/grzx.xml
+++ b/android_app/app/src/main/res/layout/grzx.xml
@@ -44,7 +44,7 @@
                         android:layout_height="27dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/sy" />
+                        android:src="@drawable/wdfb" />
 
                     <TextView
                         android:id="@+id/tvWDFB"
@@ -68,7 +68,7 @@
                         android:layout_height="27dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/fb" />
+                        android:src="@drawable/grzx_wdsc" />
 
                     <TextView
                         android:id="@+id/tvWDSC"
@@ -92,7 +92,7 @@
                         android:layout_height="27dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/xx" />
+                        android:src="@drawable/lsjl" />
 
                     <TextView
                         android:id="@+id/tvLSJL"
@@ -117,7 +117,7 @@
                         android:layout_height="27dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/grzx" />
+                        android:src="@drawable/wddy" />
 
                     <TextView
                         android:id="@+id/tvWDDY"
@@ -168,7 +168,7 @@
                         android:layout_marginLeft="30dp"
                         android:layout_gravity="center|top"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/sy" />
+                        android:src="@drawable/grzx_wdzf" />
 
                     <TextView
                         android:id="@+id/tvWDZF"
@@ -191,12 +191,12 @@
                         android:layout_marginLeft="30dp"
                         android:layout_gravity="center|top"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/fb" />
+                        android:src="@drawable/grzx_wdpj" />
 
                     <TextView
                         android:id="@+id/tvWDFWPJ"
                         style="@style/textGRZX_GRFW"
-                        android:text="我的服务评价" />
+                        android:text="我的评价" />
 
                 </LinearLayout>
 
@@ -223,7 +223,7 @@
                         android:layout_marginLeft="30dp"
                         android:layout_gravity="center|top"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/sy" />
+                        android:src="@drawable/grzx_wdhb" />
 
                     <TextView
                         android:id="@+id/tvWDHB"
@@ -246,7 +246,7 @@
                         android:layout_marginLeft="30dp"
                         android:layout_gravity="center|top"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/fb" />
+                        android:src="@drawable/grzx_wddk" />
 
                     <TextView
                         android:id="@+id/tvWDDK"
@@ -278,7 +278,7 @@
                         android:layout_marginLeft="30dp"
                         android:layout_gravity="center|top"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/sy" />
+                        android:src="@drawable/grzx_wdrz" />
 
                     <TextView
                         android:id="@+id/tvWDRZ"
@@ -301,7 +301,7 @@
                         android:layout_marginLeft="30dp"
                         android:layout_gravity="center|top"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/fb" />
+                        android:src="@drawable/grzx_wdqz" />
 
                     <TextView
                         android:id="@+id/tvWDQZ"
@@ -315,114 +315,5 @@
         </LinearLayout>
 
     </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_gravity="bottom"
-        android:background="@null"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/llSY"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivSY"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/sy" />
-
-            <TextView
-                android:id="@+id/tvSY"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="首页"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llFB"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivFB"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/fb" />
-
-            <TextView
-                android:id="@+id/tvFB"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="发布"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llXX"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivXX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/xx" />
-
-            <TextView
-                android:id="@+id/tvXX"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="消息"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llGRZX"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivGRZX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/grzx" />
-
-            <TextView
-                android:id="@+id/tvGRZX"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="个人中心"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
