--- a/android_app/app/src/main/res/layout/xx.xml
+++ b/android_app/app/src/main/res/layout/xx.xml
@@ -18,124 +18,138 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="60dp"
                 android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="350dp"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="50dp"
+                    android:textSize="20dp"
+                    android:gravity="center"
+                    android:text="消息" />
+
+                <TextView
+                    android:id="@+id/tvGD"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="..." />
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_gravity="bottom"
+                android:background="@null"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/llJXHD"
+                    android:layout_width="100dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivJXHD"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/xx_jxhd" />
+
+                    <TextView
+                        android:id="@+id/tvJXHD"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="精选活动"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llHDXX"
+                    android:layout_width="100dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivHDXX"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/xx_hdxx" />
+
+                    <TextView
+                        android:id="@+id/tvHDXX"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="互动消息"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llDYTX"
+                    android:layout_width="100dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivDYTX"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/xx_dytx" />
+
+                    <TextView
+                        android:id="@+id/tvDYTX"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="订阅提醒"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llJRTJ"
+                    android:layout_width="100dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivJRTJ"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/xx_jrtj" />
+
+                    <TextView
+                        android:id="@+id/tvJRTJ"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="今日推荐"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_gravity="bottom"
-        android:background="@null"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/llSY"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivSY"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/sy" />
-
-            <TextView
-                android:id="@+id/tvSY"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="首页"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llFB"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivFB"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/fb" />
-
-            <TextView
-                android:id="@+id/tvFB"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="发布"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llXX"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivXX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/xx" />
-
-            <TextView
-                android:id="@+id/tvXX"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="消息"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llGRZX"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivGRZX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/grzx" />
-
-            <TextView
-                android:id="@+id/tvGRZX"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="个人中心"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
