--- a/android_app/app/src/main/res/layout/grzx.xml
+++ b/android_app/app/src/main/res/layout/grzx.xml
@@ -316,4 +316,113 @@
 
     </ScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_gravity="bottom"
+        android:background="@null"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/llSY"
+            android:layout_width="100dp"
+            android:layout_height="75dp"
+            android:layout_gravity="left|bottom"
+            android:background="@null"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/ivSY"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_gravity="center|bottom"
+                android:adjustViewBounds="true"
+                android:src="@drawable/dbcd_sy" />
+
+            <TextView
+                android:id="@+id/tvSY"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="首页"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llFB"
+            android:layout_width="100dp"
+            android:layout_height="75dp"
+            android:layout_gravity="left|bottom"
+            android:background="@null"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/ivFB"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_gravity="center|bottom"
+                android:adjustViewBounds="true"
+                android:src="@drawable/dbcd_fb" />
+
+            <TextView
+                android:id="@+id/tvFB"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="发布"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llXX"
+            android:layout_width="100dp"
+            android:layout_height="75dp"
+            android:layout_gravity="left|bottom"
+            android:background="@null"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/ivXX"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_gravity="center|bottom"
+                android:adjustViewBounds="true"
+                android:src="@drawable/dbcd_xx" />
+
+            <TextView
+                android:id="@+id/tvXX"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="消息"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llGRZX"
+            android:layout_width="100dp"
+            android:layout_height="75dp"
+            android:layout_gravity="left|bottom"
+            android:background="@null"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/ivGRZX"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_gravity="center|bottom"
+                android:adjustViewBounds="true"
+                android:src="@drawable/dbcd_grzx" />
+
+            <TextView
+                android:id="@+id/tvGRZX"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="个人中心"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 </LinearLayout>
