--- a/android_app/app/src/main/res/values/styles.xml
+++ b/android_app/app/src/main/res/values/styles.xml
@@ -8,7 +8,19 @@
         <item name="colorAccent">#bc6ba6</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <!-- 设置activity切换动画 -->
+        <item name="android:windowAnimationStyle">@style/activityAnimation</item>
+
     </style>
+
+    <!-- animation 样式 -->
+        <style name="activityAnimation" parent="@android:style/Animation">
+            <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
+            <item name="android:activityOpenExitAnimation">@anim/slide_left_out</item>
+            <item name="android:activityCloseEnterAnimation">@anim/slide_left_in</item>
+            <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
+        </style>
+
 
     <style name="textGRZX_GRFW">
         <item name="android:textAlignment">center</item>
