--- a/android_app/app/src/main/res/layout/sy_esf.xml
+++ b/android_app/app/src/main/res/layout/sy_esf.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/llSY_ZF"
+    android:id="@+id/llSY_ESF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -47,7 +47,7 @@
                     android:textColor="#FFFFFF"
                     android:paddingLeft="5dp"
                     android:paddingTop="8dp"
-                    android:text="租房"
+                    android:text="二手房"
                     android:textSize="20dp" />
 
             </LinearLayout>
@@ -79,7 +79,32 @@
                         android:id="@+id/tvSY_ZF_ZZ"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
-                        android:text="整租"
+                        android:text="二手房"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llSY_ZF_XF"
+                    android:layout_width="100dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivSY_ZF_XF"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/no_image" />
+
+                    <TextView
+                        android:id="@+id/tvSY_ZF_XF"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="新房"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -104,7 +129,7 @@
                         android:id="@+id/tvSY_ZF_HZ"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
-                        android:text="合租"
+                        android:text="商铺"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -129,7 +154,7 @@
                         android:id="@+id/tvSY_ZF_DZ"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
-                        android:text="短租"
+                        android:text="写字楼"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -154,7 +179,7 @@
                         android:id="@+id/tvSY_ZF_GRFY"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
-                        android:text="个人房源"
+                        android:text="厂房"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -167,6 +192,31 @@
                 android:layout_gravity="bottom"
                 android:background="@null"
                 android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/llSY_ZF_CF"
+                    android:layout_width="100dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivSY_ZF_CF"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/no_image" />
+
+                    <TextView
+                        android:id="@+id/tvSY_ZF_CF"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="厂房"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/llSY_ZF_XZL"
@@ -188,32 +238,7 @@
                         android:id="@+id/tvSY_ZF_XZL"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
-                        android:text="写字楼"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_SP"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_SP"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_SP"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="商铺"
+                        android:text="仓库"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -244,7 +269,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/llSY_ZF_CF"
+                    android:id="@+id/llSY_ZF_TD"
                     android:layout_width="100dp"
                     android:layout_height="75dp"
                     android:layout_gravity="left|bottom"
@@ -252,7 +277,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/ivSY_ZF_CF"
+                        android:id="@+id/ivSY_ZF_TD"
                         android:layout_width="27dp"
                         android:layout_height="27dp"
                         android:layout_gravity="center|bottom"
@@ -260,10 +285,10 @@
                         android:src="@drawable/no_image" />
 
                     <TextView
-                        android:id="@+id/tvSY_ZF_CF"
+                        android:id="@+id/tvSY_ZF_TD"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
-                        android:text="厂房"
+                        android:text="土地"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -283,206 +308,22 @@
                     android:layout_marginLeft="20dp"
                     android:background="@null"
                     android:paddingTop="13dp"
-                    android:text="相关服务"
+                    android:text="猜你喜欢"
                     android:textSize="15sp" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
+                android:id="@+id/llCNXH"
+                android:layout_width="400dp"
+                android:layout_height="match_parent"
                 android:background="@null"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_BJ"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_BJ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_BJ"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="搬家"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_BAOJ"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_BAOJ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_BAOJ"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="保洁"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_WX"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_WX"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_WX"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="维修"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_PS"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_PS"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_PS"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="配送"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
+                android:orientation="vertical">
 
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_gravity="bottom"
-        android:background="@null"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/llFB"
-            android:layout_width="130dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivFB"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/dbcd_fb" />
-
-            <TextView
-                android:id="@+id/tvFB"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="租房"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llXX"
-            android:layout_width="130dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivXX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/dbcd_xx" />
-
-            <TextView
-                android:id="@+id/tvXX"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="发布"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llGRZX"
-            android:layout_width="130dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivGRZX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/dbcd_grzx" />
-
-            <TextView
-                android:id="@+id/tvGRZX"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:text="我的"
-                android:textAlignment="center" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
