--- a/android_app/app/src/main/res/values/styles.xml
+++ b/android_app/app/src/main/res/values/styles.xml
@@ -14,12 +14,12 @@
     </style>
 
     <!-- animation 样式 -->
-        <style name="activityAnimation" parent="@android:style/Animation">
-            <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
-            <item name="android:activityOpenExitAnimation">@anim/slide_left_out</item>
-            <item name="android:activityCloseEnterAnimation">@anim/slide_left_in</item>
-            <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
-        </style>
+    <style name="activityAnimation" parent="@android:style/Animation">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_left_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_left_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
+    </style>
 
 
     <style name="textGRZX_GRFW">
@@ -27,4 +27,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">27dp</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
